new filters were added
