# src/main/java/com/zufar/icedlatte/product/api/PageableProductsProvider.java
@@ -12,6 +12,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.RequestParam;
+
+import java.util.List;
+import java.util.Set;
 
 import static com.zufar.icedlatte.common.util.Utils.createPageableObject;
 
@@ -24,6 +28,21 @@ public class PageableProductsProvider {
     private final ProductInfoRepository productInfoRepository;
     private final ProductInfoDtoConverter productInfoDtoConverter;
     private final ProductUpdater productUpdater;
+
+    @Transactional(propagation = Propagation.REQUIRED, isolation = Isolation.READ_COMMITTED, readOnly = true)
+    public ProductListWithPaginationInfoDto getProducts(final Pageable pageable,
+                                                        final Integer priceFrom,
+                                                        final Integer priceTo,
+                                                        final Integer minimumAverageRating,
+                                                        final Set<String> brandNames,
+                                                        final Set<String> sellerNames) {
+        Page<ProductInfoDto> productsWithPageInfo = productInfoRepository
+                .findAllProducts(priceFrom, priceTo, minimumAverageRating, pageable)
+                .map(productInfoDtoConverter::toDto)
+                .map(productUpdater::update);
+
+        return productInfoDtoConverter.toProductPaginationDto(productsWithPageInfo);
+    }
 
     @Transactional(propagation = Propagation.REQUIRED, isolation = Isolation.READ_COMMITTED, readOnly = true)
     public ProductListWithPaginationInfoDto getProducts(final Integer page,
