# src/main/java/com/zufar/icedlatte/product/endpoint/ProductsEndpoint.java
@@ -3,9 +3,11 @@ package com.zufar.icedlatte.product.endpoint;
 import com.zufar.icedlatte.openapi.dto.ProductIdsDto;
 import com.zufar.icedlatte.openapi.dto.ProductInfoDto;
 import com.zufar.icedlatte.openapi.dto.ProductListWithPaginationInfoDto;
+import com.zufar.icedlatte.product.api.PageableProductsProvider;
 import com.zufar.icedlatte.product.api.ProductApi;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -17,8 +19,11 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+
+import static com.zufar.icedlatte.common.util.Utils.createPageableObject;
 
 @Slf4j
 @RestController
@@ -30,6 +35,7 @@ public class ProductsEndpoint implements com.zufar.icedlatte.openapi.product.api
     public static final String PRODUCTS_URL = "/api/v1/products";
 
     private final ProductApi productApi;
+    private final PageableProductsProvider productsProvider;
 
     @Override
     @GetMapping("/{productId}")
@@ -46,10 +52,16 @@ public class ProductsEndpoint implements com.zufar.icedlatte.openapi.product.api
     public ResponseEntity<ProductListWithPaginationInfoDto> getProducts(@RequestParam(name = "page", defaultValue = "0") Integer page,
                                                                         @RequestParam(name = "size", defaultValue = "50") Integer size,
                                                                         @RequestParam(name = "sort_attribute", defaultValue = "name") String sortAttribute,
-                                                                        @RequestParam(name = "sort_direction", defaultValue = "desc") String sortDirection) {
+                                                                        @RequestParam(name = "sort_direction", defaultValue = "desc") String sortDirection,
+                                                                        @RequestParam(name = "price_from", required = false) Integer priceFrom,
+                                                                        @RequestParam(name = "price_to", required = false) Integer priceTo,
+                                                                        @RequestParam(name = "minimum_average_rating", required = false) Integer minimumAverageRating,
+                                                                        @RequestParam(name = "brand_names", required = false) Set<String> brandNames,
+                                                                        @RequestParam(name = "seller_names", required = false) Set<String> sellersNames) {
         log.info("Received the request to get products with these pagination and sorting attributes: page - {}, size - {}, sort_attribute - {}, sort_direction - {}",
                 page, size, sortAttribute, sortDirection);
-        ProductListWithPaginationInfoDto productPaginationDto = productApi.getProducts(page, size, sortAttribute, sortDirection);
+        Pageable pageable = createPageableObject(page, size, sortAttribute, sortDirection);
+        ProductListWithPaginationInfoDto productPaginationDto = productsProvider.getProducts(pageable, priceFrom, priceTo, minimumAverageRating, brandNames, sellersNames);
         log.info("Products were retrieved successfully with these pagination and sorting attributes: page - {}, size - {}, sort_attribute - {}, sort_direction - {}",
                 page, size, sortAttribute, sortDirection);
         return ResponseEntity.ok()
